--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,7 @@
 test:
     script:
     - apt-get update -qy
-    - apt-get install -y python3
+    - apt-get install -y python3 python3-pip
     - pip install -r requirements.txt
     - pytest
     
