--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,6 +3,6 @@ test:
     script:
     - apt-get update -qy
     - apt-get install -y python3 python3-pip
-    - pip install -r requirements.txt
+    - pip3 install -r requirements.txt
     - pytest
     
