--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,8 +1,8 @@
 # Reading https://docs.gitlab.com/ee/ci/examples/test-and-deploy-python-application-to-heroku.html
 test:
+    image: python:3.6
     script:
     - apt-get update -qy
-    - apt-get install -y python3.6 python3-pip
     - pip3 install -r requirements.txt
     - pip3 install pytest
     - pytest
