--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,4 +6,14 @@ test:
     - pip3 install -r requirements.txt
     - pip3 install pytest
     - pytest
-    
+
+# the 'pages' job will deploy and build your site to the 'public' path
+pages:
+  stage: deploy
+#  script:
+#    - bundle exec jekyll build -d public/
+  artifacts:
+    paths:
+      - /
+  only:
+    - master # this job will affect only the 'master' branch
