--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,12 +8,14 @@ test:
     - pytest
 
 # the 'pages' job will deploy and build your site to the 'public' path
-pages:
-  stage: deploy
-  script:
-    - jekyll build -d public/
-  artifacts:
-    paths:
-      - public
-  only:
-    - master # this job will affect only the 'master' branch
+# pages:
+#   stage: deploy
+#   script:
+#     - apt-get install ruby-full build-essential zlib1g-dev
+#     - gem install jekyll
+#     - jekyll build -d public/
+#   artifacts:
+#     paths:
+#       - public
+#   only:
+#     - master # this job will affect only the 'master' branch
