--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,16 @@ test:
     - pip3 install pytest
     - pytest
 
+pypi:
+  stage: upload
+  image: python:3.6
+  script:
+    - pip install -U twine
+    - python setup.py sdist
+    - twine upload dist/*
+  only:
+    - master
+
 # the 'pages' job will deploy and build your site to the 'public' path
 # pages:
 #   stage: deploy
