--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,12 +10,15 @@ test:
 pypi:
   stage: upload
   image: python:3.6
+  variables:
+    TWINE_USERNAME: $TWINE_USERNAME
+    TWINE_PASSWORD: $TWINE_PASSWORD
   script:
     - pip install -U twine
     - python setup.py sdist
     - twine upload dist/*
   only:
-    - master
+    - tags
 
 # the 'pages' job will deploy and build your site to the 'public' path
 # pages:
